# moses.cpp

./: .editorconfig  .gitignore  CMakeLists.txt  Makefile  Package.swift  README.md  README_sycl.md  build.zig  convert-hf-to-gguf.py  convert-lora-to-ggml.py  convert-moses-ggml-to-gguf.py  convert-persimmon-to-gguf.py  convert.py  flake.nix  ggml-cuda.cu  ggml-metal.metal  ggml-sycl.cpp  ggml.c  ggml.h  moses.cpp  moses.h  requirements.txt
.devops/: cloud-v-pipeline  full-cuda.Dockerfile  full-rocm.Dockerfile  main-cuda.Dockerfile  main-intel.Dockerfile  main-rocm.Dockerfile  moses-cpp-clblast.srpm.spec  moses-cpp-cublas.srpm.spec  moses-cpp.srpm.spec  server-cuda.Dockerfile  server-intel.Dockerfile  server-rocm.Dockerfile  tools.sh
.devops/nix/: apps.nix  jetson-support.nix  package.nix  scope.nix
.github/ISSUE_TEMPLATE/: bug.md  enhancement.md
.github/workflows/: code-coverage.yml  docker.yml
awq-py/: README.md
awq-py/awq/: apply_awq.py
ci/: README.md  run.sh
cmake/: FindSIMD.cmake
common/: CMakeLists.txt  common.cpp  common.h  console.cpp  grammar-parser.cpp  grammar-parser.h  log.h  sampling.cpp  sampling.h  train.cpp  train.h
docs/: BLIS.md  token_generation_performance_tips.md
examples/: CMakeLists.txt  base-translate.sh  chat-13B.sh  chat-persistent.sh  chat-vicuna.sh  chat.sh  make-ggml.py  moses.vim  moses2-13b.sh  pydantic-models-to-grammar-examples.py  server-moses2-13B.sh
examples/baby-moses/: CMakeLists.txt  baby-moses.cpp
examples/batched/: CMakeLists.txt  README.md  batched.cpp
examples/batched-bench/: CMakeLists.txt  README.md  batched-bench.cpp
examples/batched.swift/: Package.swift
examples/beam-search/: CMakeLists.txt  beam-search.cpp
examples/benchmark/: CMakeLists.txt
examples/convert-moses2c-to-ggml/: CMakeLists.txt  README.md  convert-moses2c-to-ggml.cpp
examples/embedding/: CMakeLists.txt  README.md  embedding.cpp
examples/export-lora/: CMakeLists.txt  README.md  export-lora.cpp
examples/finetune/: CMakeLists.txt  README.md  convert-finetune-checkpoint-to-gguf.py  finetune.cpp  finetune.sh
examples/imatrix/: CMakeLists.txt  README.md  imatrix.cpp
examples/infill/: CMakeLists.txt  README.md  infill.cpp
examples/jeopardy/: README.md
examples/llava/: CMakeLists.txt  MobileVLM-README.md  clip.h  llava-cli.cpp  llava.cpp  llava.h
examples/lookahead/: CMakeLists.txt  README.md  lookahead.cpp
examples/lookup/: CMakeLists.txt  README.md  lookup.cpp
examples/main/: CMakeLists.txt  README.md  main.cpp
examples/main-cmake-pkg/: CMakeLists.txt  README.md
examples/moses-bench/: CMakeLists.txt  README.md  moses-bench.cpp
examples/moses.android/: settings.gradle.kts
examples/moses.swiftui/: README.md
examples/parallel/: CMakeLists.txt  README.md  parallel.cpp
examples/passkey/: CMakeLists.txt  README.md  passkey.cpp
examples/perplexity/: CMakeLists.txt  README.md  perplexity.cpp
examples/quantize/: CMakeLists.txt  README.md  quantize.cpp
examples/quantize-stats/: CMakeLists.txt  quantize-stats.cpp
examples/save-load-state/: CMakeLists.txt  save-load-state.cpp
examples/server/: CMakeLists.txt  README.md  api_like_OAI.py  json.hpp  oai.hpp  server.cpp  utils.hpp
examples/simple/: CMakeLists.txt  README.md  simple.cpp
examples/speculative/: CMakeLists.txt  README.md  speculative.cpp
examples/sycl/: CMakeLists.txt  README.md
examples/tokenize/: CMakeLists.txt  tokenize.cpp
examples/train-text-from-scratch/: CMakeLists.txt  README.md  convert-train-checkpoint-to-gguf.py  (+1 more)
gguf-py/: README.md  pyproject.toml
grammars/: README.md
scripts/: MosesConfig.cmake.in  build-info.sh  check-requirements.sh  ci-run.sh  compare-moses-bench.py  convert-gg.sh  gen-build-info-cpp.cmake  get-winogrande.sh  run-all-perf.sh  run-with-preset.py  server-llm.sh  sync-ggml-am.sh  verify-checksum-models.py
tests/: CMakeLists.txt  get-model.cpp  test-autorelease.cpp  test-backend-ops.cpp  test-c.c  test-grammar-parser.cpp  test-model-load-cancel.cpp  test-moses-grammar.cpp  test-sampling.cpp  test-tokenizer-0-falcon.cpp  test-tokenizer-0-moses.cpp  test-tokenizer-1-bpe.cpp  test-tokenizer-1-moses.cpp
(+28 files in other folders)
